maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:4: error: '=' expected but '(' found.
def keepHandOnSideWall:Boolean(){
                              ^Escaper:9: error: illegal start of simple expression
while(!estSurBiscuit &&  keepHandOnSideWall()==true){
^